test/spec/exception-handling/try_delegate.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/proposals/exception-handling/try_delegate.wast
;;; ARGS*: --enable-exceptions
(;; STDOUT ;;;
out/test/spec/exception-handling/try_delegate.wast:118: assert_malformed passed:
  out/test/spec/exception-handling/try_delegate/try_delegate.1.wat:1:16: error: unexpected token "delegate", expected an instr.
  (module (func (delegate 0)))
                 ^^^^^^^^
out/test/spec/exception-handling/try_delegate.wast:123: assert_malformed passed:
  out/test/spec/exception-handling/try_delegate/try_delegate.2.wat:1:46: error: unexpected token delegate, expected ).
  (module (tag $e) (func (try (do) (catch $e) (delegate 0))))
                                               ^^^^^^^^
out/test/spec/exception-handling/try_delegate.wast:128: assert_malformed passed:
  out/test/spec/exception-handling/try_delegate/try_delegate.3.wat:1:38: error: unexpected token delegate, expected ).
  (module (func (try (do) (catch_all) (delegate 0))))
                                       ^^^^^^^^
out/test/spec/exception-handling/try_delegate.wast:133: assert_malformed passed:
  out/test/spec/exception-handling/try_delegate/try_delegate.4.wat:1:34: error: unexpected token ")", expected a numeric index or a name (e.g. 12 or $foo).
  (module (func (try (do) (delegate) (delegate 0))))
                                   ^
out/test/spec/exception-handling/try_delegate.wast:138: assert_invalid passed:
  error: invalid depth: 2 (max 1)
  000001b: error: OnDelegateExpr callback failed
18/18 tests passed.
;;; STDOUT ;;)
